modify chosen choices slightly so longer words can fit

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/_listing-filter.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/_listing-filter.scss
@@ -133,9 +133,13 @@
     }
   }
 
-  .chosen-container-single .chosen-single,
-  .chosen-container-multi .chosen-choices {
+  .chosen-container-single .chosen-single {
     padding: .65em 1.35em 0 1em;
+  }
+  
+  .chosen-container-multi .chosen-choices {
+    // padding: .65em 1.35em 0 1em;
+    padding: 0;
   }
 
   .chosen-search-input {
