Allow facets to be multi select.

--- a/docroot/themes/custom/tower_health/templates/form/facets-item-list.html.twig
+++ b/docroot/themes/custom/tower_health/templates/form/facets-item-list.html.twig
@@ -36,7 +36,8 @@ set item = {
   'type': 'drupal-facet-chosen',
   'title': facet.name,
   'elements': items,
-  'width': width
+  'width': width,
+  'active_items': active_items
 }
 %}
 {% include "@molecules/form-section-item/_form-section-item.twig" with item %}
