--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/_listing-filter.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/_listing-filter.scss
@@ -84,7 +84,7 @@
       right: -2em;
       background-color: rgba($trust-ltst, .6);
     }
-    
+
     @include breakpoint($bp6) {
       width: calc(1.5em + (100vw - 1500px) / 2);
       right: calc(-1.5em - (100vw - 1500px) / 2);
@@ -136,7 +136,7 @@
   .chosen-container-single .chosen-single {
     padding: .65em 1.35em 0 1em;
   }
-  
+
   .chosen-container-multi .chosen-choices {
     // padding: .65em 1.35em 0 1em;
     padding: 0;
@@ -155,7 +155,7 @@
   .form-item__dropdown::after {
     top: 1.15em;
   }
-  
+
   .form-item__dropdown {
     margin-bottom: .25em;
   }
@@ -190,7 +190,7 @@
   .form-item--checkbox__item {
     display: inline-block;
   }
-  
+
   .form-item--radios,
   .form-item--checkboxes {
     @include adjust-font-size-to($sm-text, .9);
@@ -206,4 +206,8 @@
       margin-left: .5em;
     }
   }
+}
+
+.js-form-type-checkbox {
+  position: relative;
 }
