--- a/docroot/themes/custom/tower_health/templates/content/node--profile--page-header.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--profile--page-header.html.twig
@@ -77,6 +77,7 @@
     "alt": alt
   },
   "name": name,
+  "type": type,
   "lead_title": lead_title,
   "provider_video": provider_video,
   "rating": rating,
