--- a/docroot/themes/custom/tower_health/templates/content/node--profile--teaser.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--profile--teaser.html.twig
@@ -83,7 +83,8 @@
         "focus": focuses,
         "location": location,
         "rating": content.field_rating_overall.0['#markup'],
-        "rating_icon": rating_icon
+        "rating_icon": rating_icon,
+        "type": content.field_profile_type|field_value
       },
       "link": {
         "url": url,
