--- a/docroot/themes/custom/tower_health/templates/content/node--location--teaser.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--location--teaser.html.twig
@@ -88,7 +88,7 @@
       "link": {
         "href": href,
         "text": "Map & Directions"|t,
-        "icon": icon,
+        "button_icon": button_icon,
         "target": "_blank",
       }
     }
