--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/_listing-filter.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/_listing-filter.scss
@@ -84,7 +84,7 @@
       right: -2em;
       background-color: rgba($trust-ltst, .6);
     }
-    
+
     @include breakpoint($bp6) {
       width: calc(1.5em + (100vw - 1500px) / 2);
       right: calc(-1.5em - (100vw - 1500px) / 2);
@@ -151,7 +151,7 @@
   .form-item__dropdown::after {
     top: 1.15em;
   }
-  
+
   .form-item__dropdown {
     margin-bottom: .25em;
   }
@@ -197,4 +197,10 @@
       margin-left: .5em;
     }
   }
+}
+
+.js-form-type-checkbox {
+  position: relative;
+  display: inline-block;
+  margin-right: 1em;
 }
