Fix page header with type.

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/provider-details/provider-details.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/provider-details/provider-details.twig
@@ -47,6 +47,7 @@
           name: item.name,
           address_rows: item.address_rows,
           direction_url: item.direction_url,
+          button_icon: item.button_icon,
           phones: item.phones,
           cta: item.cta
         }%}
