--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-header/provider-header.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-header/provider-header.twig
@@ -21,7 +21,7 @@
     <div class="provider-header__card js-section-animation">
       <div class="provider-header__card-info">
         <h1 class="provider-header__name">{{ name }}</h1>
-        {% if lead_title %}
+        {% if lead_title or type|render != 'Doctor' %}
         <span class="provider-header__title">
           {% if type|render != 'Doctor' %}
           {{ type }}
