Data fix for drupal

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/anchored-cta-block/anchored-cta-block.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/anchored-cta-block/anchored-cta-block.twig
@@ -10,7 +10,7 @@
       {% block button %}
         {% include "@atoms/icon-button/icon-button.twig" with {
           "url": link.url,
-          "button_icon": link.icon,
+          "button_icon": link.button_icon,
           "text": link.text,
           "variation": "right"
         } %}
