adjust spacing between multiple numbers in location hero

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/_location-hero.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/_location-hero.scss
@@ -184,6 +184,9 @@
 }
 
 .location-details__number {
+  @include adjust-leading-to(.9);
+  margin-top: .25em;
+  
   &:link,
   &:visited {
     display: block;
