Changes made to aside redundancy, roles to MAIN, and aria-label to Site Menu.

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/main-menu.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/main-menu.twig
@@ -18,7 +18,7 @@
     <span class="toggle-expand__text">Close</span>
   </span>
 </button>
-<nav id='main-nav__container' class="main-nav__container" aria-expanded='true'>
+<nav id='main-nav__container' class="main-nav__container" aria-expanded='true' aria-label="Site Menu">
 
   <div class="utility" id="utility">
     {% block utility_menu_items %}
