--- a/docroot/themes/custom/tower_health/components/_patterns/04-templates/_default.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/04-templates/_default.twig
@@ -37,7 +37,7 @@
   {% block page_system %}
   {% endblock %}
 
-  <main role="main" {{ bem(main_base_class, (main_modifiers), main_blockname) }}>
+  <main {{ bem(main_base_class, (main_modifiers), main_blockname) }}>
     <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
     {% if page_header %}
       <div class="page-header">
@@ -49,7 +49,7 @@
 
     <div {{ bem(page_base_class, (page_modifiers), page_blockname) }}>
       {% if top_sidebar %}
-        <aside class="top-sidebar" role="complementary">
+        <aside class="top-sidebar">
           {% block top_sidebar %}{% endblock %}
         </aside>
       {% endif %}
@@ -63,7 +63,7 @@
      {% endif %}
 
       {% if bottom_sidebar %}
-        <aside class="bottom-sidebar" role="complementary">
+        <aside class="bottom-sidebar">
           {% block bottom_sidebar %}{% endblock %}
         </aside>
       {% endif %}
