--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-header/_provider-header.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-header/_provider-header.scss
@@ -2,7 +2,7 @@
   margin: 1em auto 3em;
   padding: 1em 0 2em;
   background-color: rgba($trust-ltst, .4);
-  
+
   .breadcrumbs.hero {
     margin-top: 0;
   }
@@ -15,28 +15,21 @@
   max-width: 1500px;
   margin: 2em auto 0;
   padding: 0 2em;
-  
+
   @include breakpoint($bp3) {
     flex-direction: row;
   }
-  
+
   .modal {
-    @include adjust-font-size-to($label, .8);
-    @extend %track-out;
-    display: block;
+    display: flex;
     margin: .5em 0;
-    text-transform: uppercase;
     text-decoration: none;
     font-weight: 600;
-    
+
     &:active,
     &:hover,
     &:focus {
       text-decoration: underline;
-    }
-    
-    @include breakpoint($bp3) {
-      margin-right: 2em;
     }
   }
 }
@@ -46,7 +39,7 @@
   width: 240px;
   height: 240px;
   margin: 0 auto;
-  
+
   &::before {
     position: absolute;
     top: -10px;
@@ -59,7 +52,7 @@
     border-radius: 50%;
     z-index: 1;
   }
-  
+
   @include breakpoint($bp3) {
     margin: 0 2em 0 0;
   }
@@ -70,7 +63,7 @@
   border-radius: 50%;
   width: 240px;
   height: 240px;
-  
+
   img {
     position: relative;
     z-index: 2;
@@ -80,7 +73,7 @@
 
 
 .provider-header__card {
-  
+
   @include breakpoint($bp4) {
     display: flex;
     flex-wrap: nowrap;
@@ -90,13 +83,13 @@
 
 .provider-header__card-info {
   width: 100%;
-  
+
   @include breakpoint($bp4) {
     margin-right: 1em;
     width: 65%;
     flex: 1 1 65%;
   }
-  
+
   @include breakpoint($bp5) {
     width: 70%;
     flex: 1 1 70%;
@@ -111,7 +104,7 @@
 .provider-header__title {
   @include adjust-font-size-to($sm-heading, 1.15);
   margin-top: 0;
-  
+
   .divider {
     @include adjust-font-size-to($label, 1);
     display: inline-block;
@@ -123,7 +116,7 @@
 .provider-header__ratings {
   margin-top: 2em;
   display: flex;
-  
+
   a,
   a:link,
   a:visited {
@@ -144,7 +137,7 @@
   padding: 1em 0 0;
   text-align: center;
   border-top: 1px solid $trust-ltst;
-  
+
   @include breakpoint($bp3) {
     border: none;
     padding: 0;
@@ -156,7 +149,7 @@
     width: 35%;
     flex: 1 1 35%;
   }
-  
+
   @include breakpoint($bp5) {
     width: 30%;
     flex: 1 1 30%;
@@ -169,7 +162,7 @@
   margin-bottom: 1em;
   text-transform: uppercase;
   width: 100%;
-  
+
   @include breakpoint($bp3 1199px) {
     display: none;
     visibility: hidden;
@@ -194,18 +187,18 @@
   .provider-header__cta {
     opacity: 0;
   }
-  
+
   .provider-header__first.in-view {
     animation: fadeInUp .5s ease forwards;
   }
-  
+
   .provider-header__card.in-view {
     animation: fadeInUp .5s ease forwards;
   }
-  
+
   .provider-header__cta.in-view {
     animation: fadeInUp .5s ease .25s forwards;
-    
+
     @include breakpoint($bp4) {
       animation: fadeInRightScale .5s ease .25s forwards;
     }
