--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-header/provider-header.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-header/provider-header.twig
@@ -29,7 +29,7 @@
           {% if type|render != 'Doctor' and lead_title %}
             <span class="divider">&#8226;</span>
           {% endif %}
-          
+
           {{ lead_title }}
         </span>
         {% endif %}
@@ -50,9 +50,14 @@
 
       <div class="provider-header__cta js-section-animation">
         {% include "@atoms/icon-button/icon-button.twig" with {
-          text: appt_label,
-          url: appt_url,
-          button_icon: appt_icon
+          "text": appt_label,
+          "button_icon": appt_icon,
+          "variation": "modal",
+          "modal": {
+            "type": "inline",
+            "reference": "inline-modal",
+            "content": "This is an example of an inline modal window."
+          }
         } %}
         <span class="provider-header__cta__text">
         or call <a class="provider-header__cta__link" href="tel+1{{appt_phone.number}}">{{ appt_phone.label }}</a>
