--- a/docroot/themes/custom/tower_health/templates/content/node--profile--page-header.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--profile--page-header.html.twig
@@ -84,14 +84,32 @@
   "appt_phone": {
     "number": appointment_phone,
     "label": appointment_phone_label
-  },
-  "appt_url": "#",
-  "appt_label": "Request an Appointment"|t,
-  "appt_icon": button_icon,
+  }
 } %}
 
   {% block breadcrumb %}
     {{ drupal_block('system_breadcrumb_block') }}
+  {% endblock %}
+
+  {% block appointment_button %}
+    {% if content.field_profile_epic_id.0|render %}
+      {% include "@atoms/icon-button/icon-button.twig" with {
+        "text": "Request an Appointment"|t,
+        "button_icon": button_icon,
+        "variation": "modal",
+        "modal": {
+          "type": "inline",
+          "reference": "inline-modal",
+          "content": "This is an example of an inline modal window."
+        }
+      } %}
+    {% else %}
+      {% include "@atoms/icon-button/icon-button.twig" with {
+         "text": "Request an Appointment"|t,
+         "url": "#",
+         "button_icon": button_icon
+      } %}
+    {% endif %}
   {% endblock %}
 
 {% endembed %}
