add theme setting for appointment link

--- a/docroot/themes/custom/tower_health/templates/content/node--profile--page-header.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--profile--page-header.html.twig
@@ -106,7 +106,7 @@
     {% else %}
       {% include "@atoms/icon-button/icon-button.twig" with {
          "text": "Request an Appointment"|t,
-         "url": "#",
+         "url": appointment_button_link,
          "button_icon": button_icon
       } %}
     {% endif %}
