--- a/docroot/themes/custom/tower_health/templates/content/node--profile--page-header.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--profile--page-header.html.twig
@@ -100,7 +100,7 @@
         "modal": {
           "type": "inline",
           "reference": "inline-modal",
-          "content": "This is an example of an inline modal window."
+          "content": "If no appointments are available call " ~ appointment_phone ~ " for more help"
         }
       } %}
     {% else %}
