--- a/docroot/themes/custom/tower_health/templates/content/node--profile--teaser.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--profile--teaser.html.twig
@@ -87,8 +87,8 @@
         "type": content.field_profile_type|field_value
       },
       "link": {
-        "url": url,
-        "text": "Request an Appointment"|t,
+        "href": appointment_link,
+        "text": appointment_text,
         "icon": button_icon
       }
     }
