Fix wording, and get components correct on locations and flex page.

--- a/docroot/themes/custom/tower_health/templates/content/node--location--teaser-small.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--location--teaser-small.html.twig
@@ -88,6 +88,6 @@
     ],
     "cta": {
       "url": location_providers_url,
-      "label": "View other providers at this location"|t
+      "label": "View other doctors at this location"|t
     }
 } %}
