--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/_forms.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/_forms.scss
@@ -56,7 +56,7 @@ input[type="week"] {
 
 // centers date input text for mobile browsers
 input[type="date"] {
-  padding: 1.25em 1em; 
+  padding: 1.25em 1em;
   appearance: none;
   -webkit-appearance: none;
 }
@@ -93,4 +93,14 @@ optgroup {
 
 :-moz-placeholder { /* Firefox 18- */
   color: $gray;
+}
+
+#views-exposed-form-search-search-page {
+  width: 100%;
+  display: flex;
+
+  .form-item--checkboxes,
+  .form-item {
+    display: inline-block;
+  }
 }
