add spacing under date

--- a/docroot/themes/custom/tower_health/templates/fields/field--field-article-date.html.twig
+++ b/docroot/themes/custom/tower_health/templates/fields/field--field-article-date.html.twig
@@ -41,6 +41,7 @@
 #}
 {% for item in items %}
   {% include "@atoms/article-date/article-date.twig" with {
-    "date": item.content
+    "date": item.content,
+    "class": "detail"
   } %}
 {% endfor %}
