add js for filters

--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/_forms.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/_forms.scss
@@ -98,6 +98,11 @@ optgroup {
 #views-exposed-form-search-search-page {
   width: 100%;
   display: flex;
+  padding-top: 1em;
+
+  input[type=text] {
+    display: none;
+  }
 
   .form-item--checkboxes,
   .form-item {
