--- a/docroot/themes/custom/tower_health/templates/block/block--views-exposed-filter-block--search-search-page.html.twig
+++ b/docroot/themes/custom/tower_health/templates/block/block--views-exposed-filter-block--search-search-page.html.twig
@@ -26,6 +26,8 @@
  */
 #}
 
+{{ attach_library('tower_health/listing-filter') }}
+
 {% block content %}
-  {{ content|without('site_search') }}
+  {{ content }}
 {% endblock %}
