Location hours scroll feature.

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/hours-block/hours-block.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/hours-block/hours-block.twig
@@ -1,4 +1,4 @@
-<div class="hours-block">
+<div class="hours-block" id="location-hours">
   <h2 class="hours-block__label">{{ label }}</h2>
   <ul class="hours-block__days">
     {% for hour in hours %}
