--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser/location-teaser.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser/location-teaser.twig
@@ -18,7 +18,7 @@
         {% endif %}
         
         {% if location.details.hours %}
-          <a class="teaser__row-link" href="{{ url }}">Hours</a>
+          <a class="teaser__row-link" href="{{ url }}location-hours">Hours</a>
         {% endif %}
       </div>
       <div class="teaser__section">
