--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/_listing-filter.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/_listing-filter.scss
@@ -171,7 +171,7 @@
   }
 
   .form-section__item {
-    margin-bottom: .25em;
+    margin-bottom: 1.5em;
 
     @include breakpoint($bp3) {
       margin-right: 1%;
