Updated location of "Results Shown", and made styling adjustments.

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/teaser-list/teaser-list.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/teaser-list/teaser-list.twig
@@ -1,15 +1,14 @@
 <div class="teaser-list">
-  <div class='listing-results'>
-    {% block results %}
-      Showing {{ results_shown}} of {{ results_count }} results{% if results_term %} for "<strong>{{ results_term }}</strong>"{% endif %}.
-    {% endblock %}
-  </div>
-
   {% if emergency_banner %}
   {% include "@molecules/banner-message/banner-message.twig" with {
     banner_text: emergency_banner
   } %}
   {% endif %}
+  <div class='listing-results'>
+    {% block results %}
+      Showing {{ results_shown}} of {{ results_count }} results{% if results_term %} for "<strong>{{ results_term }}</strong>"{% endif %}
+    {% endblock %}
+  </div>
   {% block teasers %}
     {% for teaser in teasers %}
       {% if teaser.type == "provider" %}
