Doctors at this Location name change for the side menu.

--- a/docroot/themes/custom/tower_health/templates/layout/region--sidebar-first--location.html.twig
+++ b/docroot/themes/custom/tower_health/templates/layout/region--sidebar-first--location.html.twig
@@ -16,8 +16,8 @@
 {% include "@molecules/sidebar-cta-list/sidebar-cta-list.twig" with {
   "cta_list": [
     {
-      "text": "Providers at this Location"|t,
-      "url": location_providers_url,
+      "text": "Doctors at this Location"|t,
+      "url": location_doctors_url,
       "icon": button_icon
     }
   ]
