Add system breadcrumb to listing heros.

--- a/docroot/themes/custom/tower_health/templates/block/block--article-listing-hero.html.twig
+++ b/docroot/themes/custom/tower_health/templates/block/block--article-listing-hero.html.twig
@@ -33,3 +33,6 @@
   })
 %}
 {% extends "@organisms/basic-header/basic-header.twig" %}
+{% block breadcrumb %}
+  {{ drupal_block('system_breadcrumb_block') }}
+{% endblock %}
