--- a/docroot/themes/custom/tower_health/templates/block/block--listing-hero-block.html.twig
+++ b/docroot/themes/custom/tower_health/templates/block/block--listing-hero-block.html.twig
@@ -32,3 +32,6 @@
   })
 %}
 {% extends "@organisms/basic-header/basic-header.twig" %}
+{% block breadcrumb %}
+  {{ drupal_block('system_breadcrumb_block') }}
+{% endblock %}
