--- a/docroot/themes/custom/tower_health/templates/block/block--location-hero-block.html.twig
+++ b/docroot/themes/custom/tower_health/templates/block/block--location-hero-block.html.twig
@@ -32,6 +32,9 @@
   })
 %}
 {% extends "@organisms/basic-header/basic-header.twig" %}
+{% block breadcrumb %}
+  {{ drupal_block('system_breadcrumb_block') }}
+{% endblock %}
 {% block form %}
   {{ content }}
 {% endblock %}
