--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/listing-filter.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/listing-filter.twig
@@ -1,7 +1,7 @@
 {% if form_sections %}
   {{ attach_library('tower_health/chosen') }}
   {{ attach_library('tower_health/list_filters') }}
-  <div class="filter js-section-animation">
+  <div class="filter js-section-animation filter__position">
     <button aria-controls="list-filters" class="filter__toggle">
       <span class="filter__toggle--open">Show</span><span class="filter__toggle--close">{{ 'Hide'|t }}</span>
       {{ 'Filters'|t }}
