--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/teaser-list/_teaser-list.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/teaser-list/_teaser-list.scss
@@ -6,17 +6,13 @@
   }
   
   .banner-message {
-    margin-bottom: 2em;
-
-    @include breakpoint($bp3) {
-      margin-bottom: 3em;
-    }
+    margin-bottom: 0;
   }
 }
 
 .listing-results {
   @include adjust-font-size-to($label, .9);
-  margin-bottom: 1em;
+  margin: 2em 0 1em;
   width: 100%;
   font-weight: 500;
   text-align: center;
