--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/teaser-list/_teaser-list.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/teaser-list/_teaser-list.scss
@@ -12,7 +12,7 @@
 
 .listing-results {
   @include adjust-font-size-to($label, .9);
-  margin: 2em 0 1em;
+  margin: 2em 0;
   width: 100%;
   font-weight: 500;
   text-align: center;
