Don't change the source of the URL.

--- a/docroot/themes/custom/tower_health/templates/layout/region--sidebar-first--location.html.twig
+++ b/docroot/themes/custom/tower_health/templates/layout/region--sidebar-first--location.html.twig
@@ -17,7 +17,7 @@
   "cta_list": [
     {
       "text": "Doctors at this Location"|t,
-      "url": location_doctors_url,
+      "url": location_providers_url,
       "icon": button_icon
     }
   ]
