Fixed the inability to click on "Browse All Locations" or "Browse All Doctors" while factoring any modals or other elements.

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_00-main-menu.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_00-main-menu.scss
@@ -181,6 +181,7 @@
     position: absolute;
     right: 1em;
     text-decoration: none;
+    z-index: 100;
 
     @include breakpoint($bp3) {
       right: 0;
