Intended to fix the star rating within the Provider Detail page, under individual reviews.

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/review-listing/review-listing.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/review-listing/review-listing.twig
@@ -25,7 +25,7 @@
           rating_icon: item.rating_icon,
           review: item.review,
           date: item.date,
-          rating_icon: icon
+          rating_icon: rating_icon
        } %}
       </li>
     {% endfor %}
