--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/04-images/00-image/_image.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/04-images/00-image/_image.scss
@@ -20,23 +20,53 @@ figure {
 }
 
 .figure--inline {
+  display: table;
   margin: 1em 0;
   
   .figure__caption {
+    display: table-caption;
+    caption-side: bottom;
     margin-top: .5em;
+  }
+
+  &.figure--left {
+    margin-right: 1em;
+    float: left;
+
+    &.figure--inline-mobile-full-width {
+      margin-right: 0;
+    }
+  }
+
+  &.figure--right {
+    margin-left: 1em;
+    float: right;
+
+    &.figure--inline-mobile-full-width {
+      margin-left: 0;
+    }
   }
   
   @include breakpoint($bp3) {
     &.figure--left {
       max-width: 50%;
-      margin-right: 1em;
-      float: left;
+
+      &.figure--inline-mobile-full-width {
+        margin-left: 1em;
+      }
     }
     
     &.figure--right {
       max-width: 50%;
-      margin-left: 1em;
-      float: right;
+
+      &.figure--inline-mobile-full-width {
+        margin-left: 1em;
+      }
     }
+  }
+
+  img,
+  picture {
+    width: 100%;
   }
 }
