Add js to help with images with captions in the figure.

--- a/docroot/themes/custom/tower_health/templates/media/filter-caption.html.twig
+++ b/docroot/themes/custom/tower_health/templates/media/filter-caption.html.twig
@@ -12,6 +12,8 @@
  * - string classes: The classes of the captioned HTML tag.
  */
 #}
+{{ attach_library("tower_health/inline_image") }}
+
 {% if "align-left" in classes %}
   {% set classes = classes ~ " figure--left" %}
 {% endif %}
