Fixed the focus off of the last autocomplete item, and tab/down-arrow link, from disappearing.

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/autocomplete-dropdown/_autocomplete.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/autocomplete-dropdown/_autocomplete.scss
@@ -73,6 +73,15 @@
     font-weight: 300;
     margin: 0;
     padding: .15em 0;
+    :hover, :visited {
+      color: $primary-dark;
+      text-decoration: underline;
+    }
+
+    :focus {
+      color: $primary-dark;
+      text-decoration: underline;
+    }
   }
 
   @include breakpoint(0 $bp3) {
