Remove phone number and add display location phone numbers.

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser--small/location-teaser--small.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser--small/location-teaser--small.twig
@@ -17,12 +17,14 @@
         } %}
       </div>
       <div class="teaser__section">
-        {% for item in phones %}
-          {% if item.number %}
-            <span class="teaser-label">{{ item.label }}</span>
-            <span>{{ item.number }}</span>
-          {% endif %}
-        {% endfor %}
+        {% if phone %}
+          <span class="teaser-label">{{ "Phone"|t }}</span>
+          <a href="tel:+1{{ phone }}">{{ phone }}</a>
+        {% endif %}
+        {% if fax %}
+          <span class="teaser-label">{{ "Fax"|t }}</span>
+          {{ fax }}
+        {% endif %}
       </div>
     </div>
     <div class="teaser__link--small">
