--- a/docroot/themes/custom/tower_health/templates/content/node--location--teaser-small.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--location--teaser-small.html.twig
@@ -70,22 +70,13 @@
  *   in different view modes.
  */
 #}
-
 {% include "@organisms/teasers/location-teaser--small/location-teaser--small.twig" with {
     "name": label,
     "address_rows": [address_1, address_2],
     "direction_url": href,
     "button_icon": button_icon,
-    "phones": [
-      {
-        "label": "Main"|t,
-        "number": phone
-      },
-      {
-        "label": "Fax"|t,
-        "number": fax
-      }
-    ],
+    "phone": phone,
+    "fax": fax,
     "cta": {
       "url": location_providers_url,
       "label": "View other doctors at this location"|t
